2011-06-30  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/template/YARPConfig.cmake.in: remove auto-linking 
	option, which was there to ease a transition to more
	normal behavior of FIND_PACKAGE(YARP) last year.

2011-06-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: fix C# types for Image::getRawImage()
	[thanks Stephane Lallee]

2011-06-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: bump version number to 2.3.5

	* example/swig/yarp.i: patch for using NetworkBase::write via
	SWIG [thanks Leo Pape]

2011-06-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* YarpSystemCheck.cmake: check for __ACE_INLINE__ being needed, it
	got dropped from ACE config file for linux from ACE 6.0.2 and
	later.

	* src/libYARP_OS/include/yarp/os/impl/PlatformTime.h,
	src/libYARP_OS/src/ShmemInputStream.cpp: gettimeofday
	moved in ACE 6.0.2 and later [thanks Serena Ivaldi]
	[thanks Fabien Benureau]

	* src/libYARP_OS/src/Run.cpp: make gcc 4 happy with
	type of NULL sentinel value

2011-06-16 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/Run.cpp
	* src/libYARP_OS/src/RunReadWrite.cpp
	* src/libYARP_OS/src/RunProcManager.cpp
	* src/libYARP_OS/include/os/Run.h
	* src/libYARP_OS/include/os/impl/RunReadWrite.h
	* src/libYARP_OS//include/os/impl/RunProcManager.h
	yarprun splitted in more files.

2011-06-14 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/Run.cpp
	yarprun stdio termination bug fixed.
	Dependendence by Companion removed,
	stdio implemented in Run.

2011-14-06  Lorenzo Natale  <lorenzo.natale@iit.it>
    * ChangeLog
    * CMakeLists.txt
    * conf/template/YARPConfigUninstall.cmake.in
    * conf/YARPUninstall.cmake
    Added Uninstall target
    

2011-06-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: render "[help]" responses
	in traditional form, for easy reading.

	* src/libYARP_dev/src/DeviceDriver.cpp: send "[help]" responses